<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/preferences">
    <ListPreference
        android:defaultValue="@string/pref_list_uplifting_breathing_value"
        android:entries="@array/breathing_style_list"
        android:entryValues="@array/breathing_style_list_values"
        android:key="@string/pref_list_breath_style_key"
        android:summary="%s"
        android:title="@string/pref_list_breath_style_label" />
    <com.axel.breatheandrelax.view.CustomSeekBarPreference
        android:key="@string/pref_seekbar_inhale_key"
        android:title="@string/pref_seekbar_inhale_label"
        custom:max="@integer/pref_seekbar_max"
        custom:startAt="@integer/inhale_default" />
    <com.axel.breatheandrelax.view.CustomSeekBarPreference
        android:key="@string/pref_seekbar_hold_key"
        android:title="@string/pref_seekbar_hold_label"
        custom:max="@integer/pref_seekbar_max"
        custom:startAt="@integer/hold_default" />
    <com.axel.breatheandrelax.view.CustomSeekBarPreference
        android:key="@string/pref_seekbar_exhale_key"
        android:title="@string/pref_seekbar_exhale_label"
        custom:max="@integer/pref_seekbar_max"
        custom:startAt="@integer/exhale_default" />
    <com.axel.breatheandrelax.view.CustomSeekBarPreference
        android:key="@string/pref_seekbar_pause_key"
        android:title="@string/pref_seekbar_pause_label"
        custom:max="@integer/pref_seekbar_max"
        custom:startAt="@integer/pause_default" />
    <ListPreference
        android:defaultValue="@string/pref_animation_style_default"
        android:entries="@array/animation_style_list"
        android:entryValues="@array/animation_style_list_values"
        android:key="@string/pref_animation_style_key"
        android:summary="%s"
        android:title="@string/pref_animation_style_label" />
    <com.axel.breatheandrelax.view.ColorPickerPreference
        android:defaultValue="@color/inhale_default_color"
        android:entries="@array/color_list_values"
        android:key="@string/pref_colors_inhale_key"
        android:title="@string/pref_colors_inhale_label" />
    <ListPreference
        android:defaultValue="@string/pref_colors_exhale_default"
        android:entries="@array/color_list"
        android:entryValues="@array/color_list_values"
        android:key="@string/pref_colors_exhale_key"
        android:summary="%s"
        android:title="@string/pref_colors_exhale_label" />
    <CheckBoxPreference
        android:defaultValue="@bool/pref_enable_stopwatch_default"
        android:key="@string/pref_enable_stopwatch_key"
        android:summaryOff="@string/pref_enable_stopwatch_summary_off"
        android:summaryOn="@string/pref_enable_stopwatch_summary_on"
        android:title="@string/pref_enable_stopwatch_label" />
</androidx.preference.PreferenceScreen>