<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:theme="@style/dialog"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/choose_time"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:orientation="horizontal">

            <com.axel.breatheandrelax.view.CustomNumberPicker
                android:id="@+id/minutePicker"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                custom:maxValue="59"
                custom:minValue="1"
                custom:twoDigitNumbers="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:layout_gravity="center_vertical"/>

            <com.axel.breatheandrelax.view.CustomNumberPicker
                android:id="@+id/secondPicker"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                custom:maxValue="59"
                custom:minValue="0"
                custom:twoDigitNumbers="true" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/minutes"
                android:gravity="center"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/seconds"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <Button
            android:id="@+id/bu_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:theme="@style/dialog"
            android:background="@android:color/transparent"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"/>

        <Button
            android:id="@+id/bu_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:background="@android:color/transparent"
            android:theme="@style/dialog"/>

    </LinearLayout>


</LinearLayout>